--- a/petsapp/app/src/main/res/layout/activity_favorites_host.xml
+++ b/petsapp/app/src/main/res/layout/activity_favorites_host.xml
@@ -19,7 +19,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navGraph="@navigation/nav_cats" />
+            app:navGraph="@navigation/nav_favorites" />
 
         <include
             android:id="@+id/bottom_navigation"
