--- a/petsapp/app/src/main/res/layout/fragment_cats_detail.xml
+++ b/petsapp/app/src/main/res/layout/fragment_cats_detail.xml
@@ -9,8 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
-        >
+        android:padding="20dp">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_cats_image"
