--- a/petsapp/app/src/main/res/layout/fragment_cats_detail.xml
+++ b/petsapp/app/src/main/res/layout/fragment_cats_detail.xml
@@ -19,7 +19,8 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_cat_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="20dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_cat_description"
@@ -30,7 +31,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_cats_image"
-            tools:text="@string/txt_cat_description" />
+            tools:text="@string/txt_cat_description"
+            android:layout_marginBottom="20dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_cat_temperament"
@@ -41,7 +43,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_cat_description"
-            tools:text="@string/txt_cat_temperament" />
+            tools:text="@string/txt_cat_temperament"
+            android:layout_marginBottom="20dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_cat_country_code"
@@ -52,27 +55,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_cat_temperament"
-            tools:text="@string/txt_cat_country_code" />
+            tools:text="@string/txt_cat_country_code"
+            android:layout_marginBottom="20dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_cat_origin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/txt_size_description"
-            app:layout_constraintBottom_toTopOf="@+id/iv_favorite"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_cat_country_code"
-            tools:text="@string/txt_cat_origin" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_favorite"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_favorite_outline"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_cat_origin" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_cat_country_code"
+            tools:text="@string/txt_cat_origin"
+            android:layout_marginBottom="20dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
